Fixed animation of collapse Made Plex Titles and Plex Issues collapse

--- a/www/css/plexNotes.css
+++ b/www/css/plexNotes.css
@@ -25,6 +25,11 @@ input[type="text"], textarea {
 }
 */
 
+
+.collapse {
+    transition: all 3.22s ease-in-out;
+}
+
 .submitted .ng-invalid
 {
     border: 1px solid red;
